[package]
name = "near-jsonrpc-client"
version = "0.0.0" # managed by cargo-workspaces, see below
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-jsonrpc-client-rs"
description = "Lower-level API for interfacing with the NEAR Protocol via JSONRPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "api", "jsonrpc", "rpc", "async"]
rust-version = "1.67.1"

# cargo-workspaces
[workspace.metadata.workspaces]
version = "0.4.1"

[dependencies]
log = "0.4.17"
uuid = { version = "1.3.0", features = ["v4"], optional = true }
borsh = "0.9"
borsh-derive = "0.9"
serde = "1.0.122"
reqwest = { version = "0.11.14", features = ["json"], default-features = false }
thiserror = "1.0.38"
serde_json = "1.0.93"
lazy_static = "1.4.0"

#near-crypto = "0.15.0"
#near-primitives = "0.15.0"
#near-chain-configs = "0.15.0"
#near-jsonrpc-primitives = "0.15.0"

near-crypto = { git = 'https://github.com/hexiaoyuan/nearcore.git', branch = '1.31.1-pt01' }
near-primitives = { git = 'https://github.com/hexiaoyuan/nearcore.git', branch = '1.31.1-pt01' }
near-chain-configs = { git = 'https://github.com/hexiaoyuan/nearcore.git', branch = '1.31.1-pt01' }
near-jsonrpc-primitives = { git = 'https://github.com/hexiaoyuan/nearcore.git', branch = '1.31.1-pt01', features = ["full"]}

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"

[features]
default = ["auth", "native-tls"]
any = []
auth = ["uuid"]
sandbox = []
adversarial = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "auth"
required-features = ["auth"]

[package.metadata.docs.rs]
features = ["any", "auth", "sandbox"]
